name:    andromeda
version: 0.1.1.0

synopsis: A GLSL codegenerating eDSL
description:
    A GLSL codegenerating eDSL, there are two
    versions: one based on the Simply Typed
    Lambda Calculus, and another with a Monadic,
    imperative style.

license:      WTFPL
license-file: LICENSE

author:     Jared Loomis
maintainer: jaredloomis1@gmail.com

category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Andromeda.Simple.Expr, Andromeda.Simple.GLSL, Andromeda.Simple.Type,
    Andromeda.Simple.Util, Andromeda.Simple.Var, Andromeda.Simple.Render.Mesh,
    Andromeda.Simple.Render.Compile, Andromeda.Simple.Render.VertexBuffer,

    Andromeda.Lambda.Utils, Andromeda.Lambda.NatR, Andromeda.Lambda.GLSL,
    Andromeda.Lambda.StdLib, Andromeda.Lambda.Glom, Andromeda.Lambda.Expr,
    Andromeda.Lambda.Shader, Andromeda.Lambda.Type,
    Andromeda.Lambda.VertexBuffer, Andromeda.Lambda.GPU,

    Andromeda.Monad, Andromeda.Monad.Struct, Andromeda.Monad.GLSL,
    Andromeda.Monad.StdLib, Andromeda.Monad.ShaderType, Andromeda.Monad.GPU,
    Andromeda.Monad.Vec, Andromeda.Monad.Type, Andromeda.Monad.Primitive
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  other-extensions:
    DataKinds, KindSignatures, TypeOperators, GADTs, ScopedTypeVariables,
    ExistentialQuantification, PatternSynonyms, FlexibleInstances,
    DeriveFunctor, TypeFamilies, LiberalTypeSynonyms, RankNTypes,
    GeneralizedNewtypeDeriving, MultiParamTypeClasses, OverloadedStrings,
    FlexibleContexts, PolyKinds, NoMonomorphismRestriction,
    FunctionalDependencies, TupleSections, UndecidableInstances

  build-depends:
    base >= 4.7,
    bytestring, vector, containers, mtl, free, Vec,
    JuicyPixels,
    OpenGL >= 2.9, GLFW-b, OpenGLRaw >=1.5

  hs-source-dirs:      src

  default-language:    Haskell2010
  
  ghc-options:
--      -prof -fprof-auto
    -Wall
